import React from 'react';

import { fireEvent, render } from '@testing-library/react';

import { CanvasContext } from '@core/app/contexts/CanvasContext';
import { isParamsLabelDev } from '@core/helpers/is-dev';

const mockSetMouseMode = jest.fn();

jest.mock('@core/app/stores/canvas/utils/mouseMode', () => ({
  setMouseMode: mockSetMouseMode,
}));

const mockUseSelectTool = jest.fn();
const mockImportImage = jest.fn();

jest.mock('@core/app/components/dialogs/Flux101', () => ({ showFlux101: jest.fn() }));

jest.mock('@core/app/actions/beambox/svgeditor-function-wrapper', () => ({
  importImage: mockImportImage,
  useSelectTool: mockUseSelectTool,
}));

jest.mock('@core/app/contexts/CanvasContext', () => ({
  CanvasContext: React.createContext({}),
}));

const mockShowPassThrough = jest.fn();

jest.mock('@core/app/components/pass-through', () => ({
  showPassThrough: mockShowPassThrough,
}));

const mockHandlePreviewClick = jest.fn();

jest.mock('@core/helpers/device/camera/previewMode', () => ({
  handlePreviewClick: mockHandlePreviewClick,
}));

const mockToggleDrawerMode = jest.fn();

jest.mock('@core/app/stores/canvas/canvasStore', () => ({
  useCanvasStore: () => ({
    toggleDrawerMode: mockToggleDrawerMode,
  }),
}));

const mockClearSelection = jest.fn();

jest.mock('@core/app/svgedit/selection', () => ({
  clearSelection: mockClearSelection,
}));

const mockCreateParamsLabel = jest.fn();

jest.mock('@core/app/svgedit/text/paramsLabel', () => ({
  createParamsLabel: mockCreateParamsLabel,
}));

jest.mock('./LeftPanelButtonGroup', () => {
  const MockLeftPanelButtonGroup = ({ id, options, shortcut }: any) => (
    <div data-testid="button-group" id={id} title={`${options[0].label} (${shortcut})`}>
      {options.map((opt: any) => (
        <button key={opt.id} onClick={opt.onClick} title={opt.label}>
          {opt.label}
        </button>
      ))}
    </div>
  );

  return MockLeftPanelButtonGroup;
});

import DrawingToolButtonGroup from './DrawingToolButtonGroup';

describe('test DrawingToolButtonGroup', () => {
  beforeEach(() => {
    jest.clearAllMocks();
    jest.useRealTimers();
    jest.mocked(isParamsLabelDev).mockReturnValue(false);
  });

  test('should render correctly', () => {
    const { container } = render(<DrawingToolButtonGroup className="flux" />);

    expect(container).toMatchSnapshot();

    fireEvent.click(container.querySelector('#left-Photo')!);
    expect(mockImportImage).toHaveBeenCalledTimes(1);

    // Click the Text option in the button group
    fireEvent.click(container.querySelector('button[title="Text"]')!);
    expect(mockSetMouseMode).toHaveBeenCalledTimes(1);
    expect(mockSetMouseMode).toHaveBeenNthCalledWith(1, 'text');

    // Click the FitText option in the button group
    fireEvent.click(container.querySelector('button[title="Text Box"]')!);
    expect(mockSetMouseMode).toHaveBeenCalledTimes(2);
    expect(mockSetMouseMode).toHaveBeenNthCalledWith(2, 'fit-text');

    fireEvent.click(container.querySelector('#left-Rectangle')!);
    expect(mockSetMouseMode).toHaveBeenCalledTimes(3);
    expect(mockSetMouseMode).toHaveBeenNthCalledWith(3, 'rect');

    fireEvent.click(container.querySelector('#left-Ellipse')!);
    expect(mockSetMouseMode).toHaveBeenCalledTimes(4);
    expect(mockSetMouseMode).toHaveBeenNthCalledWith(4, 'ellipse');

    fireEvent.click(container.querySelector('#left-Polygon')!);
    expect(mockSetMouseMode).toHaveBeenCalledTimes(5);
    expect(mockSetMouseMode).toHaveBeenNthCalledWith(5, 'polygon');

    fireEvent.click(container.querySelector('#left-Line')!);
    expect(mockSetMouseMode).toHaveBeenCalledTimes(6);
    expect(mockSetMouseMode).toHaveBeenNthCalledWith(6, 'line');

    fireEvent.click(container.querySelector('#left-Element')!);
    expect(mockToggleDrawerMode).toHaveBeenCalledTimes(1);
    expect(mockToggleDrawerMode).toHaveBeenNthCalledWith(1, 'element-panel');

    fireEvent.click(container.querySelector('#left-Pen')!);
    expect(mockSetMouseMode).toHaveBeenCalledTimes(7);
    expect(mockSetMouseMode).toHaveBeenNthCalledWith(7, 'path');

    fireEvent.click(container.querySelector('#left-Cursor')!);
    expect(mockUseSelectTool).toHaveBeenCalledTimes(1);
  });

  test('preview button should render correctly', () => {
    jest.useFakeTimers();

    const { container } = render(<DrawingToolButtonGroup className="flux" />);

    fireEvent.click(container.querySelector('#left-Preview')!);
    expect(mockHandlePreviewClick).toHaveBeenCalledTimes(1);
  });

  test('should render correctly when in pass through mode', () => {
    const contextValue = { hasPassthroughExtension: true };
    const { container } = render(
      <CanvasContext value={contextValue as any}>
        <DrawingToolButtonGroup className="flux" />
      </CanvasContext>,
    );

    expect(container).toMatchSnapshot();
    expect(mockShowPassThrough).not.toHaveBeenCalled();
    fireEvent.click(container.querySelector('#left-PassThrough')!);
    expect(mockShowPassThrough).toHaveBeenCalledTimes(1);
    expect(mockShowPassThrough).toHaveBeenCalledWith(mockUseSelectTool);
  });

  test('should create params label', () => {
    jest.mocked(isParamsLabelDev).mockReturnValue(true);

    const { getByTitle } = render(<DrawingToolButtonGroup className="flux" />);

    fireEvent.click(getByTitle('Params Label'));

    expect(mockCreateParamsLabel).toHaveBeenCalledTimes(1);
    expect(mockCreateParamsLabel).toHaveBeenCalledWith(100, 250);
  });
});
