// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test DrawingToolButtonGroup should render correctly 1`] = `
<div>
  <div
    class="flux"
  >
    <div
      class="container"
      id="left-Preview"
      title="Camera Preview"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container active"
      id="left-Cursor"
      title="Select (V)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Photo"
      title="Image (I)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      data-testid="button-group"
      id="left-Text"
      title="Text (T)"
    >
      <button
        title="Text"
      >
        Text
      </button>
      <button
        title="Text Box"
      >
        Text Box
      </button>
    </div>
    <div
      class="container"
      id="left-Element"
      title="Elements (E)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Rectangle"
      title="Rectangle (M)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Ellipse"
      title="Oval (C)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Polygon"
      title="Polygon"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Line"
      title="Line (\\)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Pen"
      title="Pen (P)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-AiGenerate"
      title="AI Create"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Generator"
      title="Generators"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="separator"
    />
    <div
      class="container"
      id="left-Flux101"
      title="FLUX 101"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <span
          class="ant-badge css-dev-only-do-not-override-hash"
        >
          <svgr-url />
          <sup
            class="ant-scroll-number ant-badge-count ant-badge-count-sm ant-badge-multiple-words"
            data-show="true"
            style="margin-top: 2px; right: 8px; background: rgb(24, 144, 255);"
            title="23"
          >
            <bdi>
              <span
                class="ant-scroll-number-only"
                style="transition: none;"
              >
                <span
                  class="ant-scroll-number-only-unit current"
                >
                  2
                </span>
              </span>
              <span
                class="ant-scroll-number-only"
                style="transition: none;"
              >
                <span
                  class="ant-scroll-number-only-unit current"
                >
                  3
                </span>
              </span>
            </bdi>
          </sup>
        </span>
      </span>
    </div>
    <div
      class="container beamy"
      id="left-Beamy"
      title="Beamy"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
  </div>
</div>
`;

exports[`test DrawingToolButtonGroup should render correctly when in pass through mode 1`] = `
<div>
  <div
    class="flux"
  >
    <div
      class="container"
      id="left-Preview"
      title="Camera Preview"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container active"
      id="left-Cursor"
      title="Select (V)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Photo"
      title="Image (I)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      data-testid="button-group"
      id="left-Text"
      title="Text (T)"
    >
      <button
        title="Text"
      >
        Text
      </button>
      <button
        title="Text Box"
      >
        Text Box
      </button>
    </div>
    <div
      class="container"
      id="left-Element"
      title="Elements (E)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Rectangle"
      title="Rectangle (M)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Ellipse"
      title="Oval (C)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Polygon"
      title="Polygon"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Line"
      title="Line (\\)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Pen"
      title="Pen (P)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-AiGenerate"
      title="AI Create"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Generator"
      title="Generators"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-PassThrough"
      title="Passthrough"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="separator"
    />
    <div
      class="container"
      id="left-Flux101"
      title="FLUX 101"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <span
          class="ant-badge css-dev-only-do-not-override-hash"
        >
          <svgr-url />
          <sup
            class="ant-scroll-number ant-badge-count ant-badge-count-sm ant-badge-multiple-words"
            data-show="true"
            style="margin-top: 2px; right: 8px; background: rgb(24, 144, 255);"
            title="23"
          >
            <bdi>
              <span
                class="ant-scroll-number-only"
                style="transition: none;"
              >
                <span
                  class="ant-scroll-number-only-unit current"
                >
                  2
                </span>
              </span>
              <span
                class="ant-scroll-number-only"
                style="transition: none;"
              >
                <span
                  class="ant-scroll-number-only-unit current"
                >
                  3
                </span>
              </span>
            </bdi>
          </sup>
        </span>
      </span>
    </div>
    <div
      class="container beamy"
      id="left-Beamy"
      title="Beamy"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
  </div>
</div>
`;
